# cronus_test

./: .gitignore  CMakeLists.txt  README.md  setup.sh  tasks.json
cpp/linked_list/: linked_list.cpp  linked_list.h  test_linked_list.cpp
cpp/string_utils/: string_utils.cpp  string_utils.h  test_string_utils.cpp
include/: inventory.h  item.h
javascript/data_transform/: transform.js  transform.test.js
javascript/task_manager/: taskManager.js  taskManager.test.js
prompts/: scenarios.json
python/calculator/: calculator.py  operations.py  test_calculator.py
python/text_processor/: processor.py  test_processor.py
src/: inventory.cpp  item.cpp  main.cpp
tests/: inventoryTest.cpp  itemTest.cpp  testFramework.h  testMain.cpp
